# opengate

./: .gitignore  Cargo.toml  Makefile  README.md  download_models.sh
.github/workflows/: ci.yaml
beats/: entrain_theta_to_delta.yaml  example.yaml  example_entrain.yaml  meditation_delta.yaml  meditation_delta_with_speech.yaml  test_short.yaml
openstates/: 001_liminal_state.yaml
src/: analysis.rs  config.rs  fileutils.rs  lib.rs  logger.rs  main.rs  mixin.rs  noise.rs  render.rs  sysconfig.rs  timeutils.rs  tts.rs  utils.rs  writer.rs
src/sink/: flac.rs  mod.rs  wav.rs
text_to_speech/: download_models.sh  example_tts.txt
