[package]
name = "opengate"
version = "0.3.0"
edition = "2024"
authors = ["Savage Ogre <savageogre.music@gmail.com>"]
description = "An open-source toolset for consciousness expansion."
license = "GPL-3.0-or-later"
readme = "README.md"
keywords = ["audio", "binaural", "entrainment", "meditation", "opengate"]
categories = ["multimedia::audio"]
exclude = [
  "audio/*.wav",
  "text_to_speech/*.tar.gz",
  "text_to_speech/models/*.onnx",
  "text_to_speech/models/*.onnx.json",
  ".github/*",
  "target/*"
]

[features]
default = []
flac = ["flac-bound"]

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
dasp = { version = "0.11.0", features = ["signal"] }
hound = "3.5.1"
num-traits = "0.2.19"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
flac-bound = { version = "0.5", default-features = false, features = ["libflac-nobuild"], optional = true }
rand = "0.9.2"
regex = "1.11.2"
yaml-merge-keys = { version = "0.8.2", features = ["serde_yaml"] }
log = "0.4.28"
env_logger = "0.11.8"
shellexpand = "3.1.1"
sha2 = "0.10.9"
hex = "0.4.3"

[[bin]]
name = "opengate"
path = "src/bin/opengate.rs"

[[bin]]
name = "opengate-tts"
path = "src/bin/opengate-tts.rs"
